'changes in font and design'

--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,18 @@
 /* FONTS */
 
 @import url("https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Bungee&family=MuseoModerno:wght@300&family=Staatliches&display=swap');
 /* GLOBAL STYLES */
 
 :root {
-  --font-primary: 'Poppins', sans-serif;
+  --font-primary: 'MuseoModerno', sans-serif;
   --font-secondary: 'Arvo', serif;
   --font-code: 'Roboto', monospace;
-  --bg-color: #00163f;
-  --font-color: #ffffff;
-  --btn-bg-color: #ffffff;
-  --accent-color: #be7efe;
-  --header-shadow: #000 0px 0px 5px;
+  --bg-color: #112B3C;
+  --font-color: #EFEFEF;
+  --btn-bg-color: #eba97e;
+  --accent-color: #112B3C;
+  --header-shadow: #205375 0px 0px 5px;
 }
 
 * {
@@ -35,7 +35,7 @@ body {
   flex-direction: column;
   max-width: 960px;
   margin: 0 auto;
-  padding: 1rem 2rem;
+
 }
 
 /* HEADER */
@@ -75,6 +75,7 @@ header .container {
   text-decoration: none;
   outline: none;
 }
+
 .btn:hover {
   box-shadow: none;
 }
@@ -109,11 +110,13 @@ section {
   display: flex;
   gap: 2rem
 }
+
 .countdown .clock-item {
   list-style: none;
   width: 70px;
   height: auto;
 }
+
 .countdown .clock-item .count-number {
   background: var(--accent-color);
   color: var(--font-color);
@@ -127,6 +130,7 @@ section {
   line-height: 1;
   border-radius: 4px 4px 0 0;
 }
+
 .countdown .clock-item .count-text {
   background: var(--btn-bg-color);
   font-family: var(--font-secondary);
@@ -168,16 +172,18 @@ section {
   .menu {
     gap: 1rem;
   }
+
   .wallet-btn {
     margin-left: 0;
     padding: 1rem;
     max-width: 8rem;
   }
+
   .countdown h1 {
     font-size: 2rem;
   }
+
   .countdown p {
     font-size: 1rem;
   }
 }
- 
